Fix label overflow

--- a/page/style/index.css
+++ b/page/style/index.css
@@ -96,7 +96,8 @@ li {
   all: unset;
   background-color: rgba(230, 230, 230, 0.1);
   padding: 0.5rem 1.5rem;
-  display: flex;
+  display: grid;
+  grid-template-columns: 1rem 1fr auto;
   gap: 1rem;
   font-size: 1.5rem;
 }
@@ -106,7 +107,7 @@ li::before {
   font-weight: bold;
 }
 
-ul > li.boot::before {
+li.boot::before {
   color: rgb(230, 51, 39);
 }
 
@@ -115,7 +116,7 @@ li.up::before {
 }
 
 li > .label {
-  flex: 1 0 auto;
+  overflow-x: hidden;
 }
 
 li > .kill {
